# example-api/swagger.json
@@ -42,10 +42,10 @@
                 },
                 "x-amazon-lambda": {
                     "handler": "./hello/there",
-                    "memorySize": "128",
-                    "role": "arn:aws:iam::347191724861:role/Lambda",
-                    "timeout": "60",
-                    "runtime": "nodejs",
+                    "memorySize": "",
+                    "role": "",
+                    "timeout": "",
+                    "runtime": "",
                     "arn": "arn:aws:lambda:us-east-1:347191724861:function:MySampleAPI-Hello-There-DELETE"
                 },
                 "x-amazon-apigateway-integration": {
@@ -83,8 +83,7 @@
                                 "application/json": "Empty"
                             }
                         }
-                    },
-                    "uri": "arn:aws:apigateway:us-east-1:lambda:path/2015-03-31/functions/arn:aws:lambda:us-east-1:347191724861:function:MySampleAPI-Hello-There-DELETE/invocations"
+                    }
                 }
             },
             "patch": {
@@ -96,10 +95,10 @@
                 },
                 "x-amazon-lambda": {
                     "handler": "./hello/there",
-                    "memorySize": "128",
-                    "role": "arn:aws:iam::347191724861:role/Lambda",
-                    "timeout": "60",
-                    "runtime": "nodejs",
+                    "memorySize": "",
+                    "role": "",
+                    "timeout": "",
+                    "runtime": "",
                     "arn": "arn:aws:lambda:us-east-1:347191724861:function:MySampleAPI-Hello-There-PATCH"
                 },
                 "x-amazon-apigateway-integration": {
@@ -137,12 +136,8 @@
                                 "application/json": "Empty"
                             }
                         }
-                    },
-                    "uri": "arn:aws:apigateway:us-east-1:lambda:path/2015-03-31/functions/arn:aws:lambda:us-east-1:347191724861:function:MySampleAPI-Hello-There-PATCH/invocations"
+                    }
                 }
-            },
-            "x-amazon-apigateway-resource": {
-                "id": "5l6brj"
             }
         },
         "/hello/world": {
@@ -187,10 +182,10 @@
                 },
                 "x-amazon-lambda": {
                     "handler": "./hello/world",
-                    "memorySize": "128",
-                    "role": "arn:aws:iam::347191724861:role/Lambda",
-                    "timeout": "60",
-                    "runtime": "nodejs",
+                    "memorySize": "",
+                    "role": "",
+                    "timeout": "",
+                    "runtime": "",
                     "arn": "arn:aws:lambda:us-east-1:347191724861:function:MySampleAPI-Hello-World-POST"
                 },
                 "x-amazon-apigateway-integration": {
@@ -228,12 +223,8 @@
                                 "application/json": "Empty"
                             }
                         }
-                    },
-                    "uri": "arn:aws:apigateway:us-east-1:lambda:path/2015-03-31/functions/arn:aws:lambda:us-east-1:347191724861:function:MySampleAPI-Hello-World-POST/invocations"
+                    }
                 }
-            },
-            "x-amazon-apigateway-resource": {
-                "id": "uf632x"
             }
         },
         "/hello": {
@@ -278,10 +269,10 @@
                 },
                 "x-amazon-lambda": {
                     "handler": "./hello/world",
-                    "memorySize": "128",
-                    "role": "arn:aws:iam::347191724861:role/Lambda",
-                    "timeout": "60",
-                    "runtime": "nodejs",
+                    "memorySize": "",
+                    "role": "",
+                    "timeout": "",
+                    "runtime": "",
                     "arn": "arn:aws:lambda:us-east-1:347191724861:function:MySampleAPI-Hello-GET"
                 },
                 "x-amazon-apigateway-integration": {
@@ -319,21 +310,9 @@
                                 "application/json": "Empty"
                             }
                         }
-                    },
-                    "uri": "arn:aws:apigateway:us-east-1:lambda:path/2015-03-31/functions/arn:aws:lambda:us-east-1:347191724861:function:MySampleAPI-Hello-GET/invocations"
+                    }
                 }
-            },
-            "x-amazon-apigateway-resource": {
-                "id": "tq3mlk"
-            }
-        },
-        "/": {
-            "x-amazon-apigateway-resource": {
-                "id": "t3i5o9xamb"
             }
         }
-    },
-    "x-amazon-apigateway-restapi": {
-        "id": "j1tajm34xc"
     }
 }
